--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     --bg-white: #eee;
   }
 
-html, body {
-  height: 100vh;
+html, body, #root  {
+  min-height: 100vh;
   background: var(--bg-white);
 }
