--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
   /* index.css -- minor resets */
 
-  :root {
-    --bg-white: #eee;
-  }
+:root {
+  --bg-white: #eee;
+}
 
 html, body, #root  {
-  min-height: 100vh;
+  overflow: "hidden";
+  height: 100%;
   background: var(--bg-white);
+}
+
+/* utils */
+
+.h-100 {
+  height: 100%;
 }
